Add menu elements on mobile

--- a/index.html
+++ b/index.html
@@ -21,8 +21,30 @@
                 <span>TeckLink</span>
             </div>
             <div class="ham-menu">
-                <img src="./images/header/icon-menu.svg" alt="">
+                <img id="menuIcon" onclick="myFunction()" src="./images/header/icon-menu.svg" alt="">
             </div>
+        </div>
+        <div class="contentMenu">
+            <ul id="toggle" class="hide">
+                <li>
+                    <a href="#" class="current">Workshop</a>
+                </li>
+                <li>
+                    <a href="#" class="">TeckMeet</a>
+                </li>
+                <li>
+                    <a href="#" class="">Jobs</a>
+                </li>
+                <li>
+                    <a href="#" class="">TeckConnect</a>
+                </li>
+                <li>
+                    <a href="#" class="">VoiceCast</a>
+                </li>
+                <li>
+                    <a href="#" class="">Messenger</a>
+                </li>
+            </ul>
         </div>
     </header>
 </body>
