search-bar done

--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
             </ul>
         </div>
     </header>
+    <main>
+        <div class="main-top">
+            <div class="profile-picture">
+                <img src="./images/main/icon-profile.png" alt="">
+            </div>
+            <div class="search-bar">
+                <form action="">
+                    <input type="text" placeholder="&nbsp Start a discussion">
+                </form>
+            </div>
+            <div class="icon-chat">
+                <img src="./images/main/icon-chat.svg" alt="">
+            </div>
+        </div>
+        <hr>
+        <div class="feed">
+
+        </div>
+    </main>
 </body>
 
 </html>
