--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="search-bar">
                 <form action="">
-                    <input type="text" placeholder="&nbsp Start a discussion">
+                    <input type="text" placeholder="Start a discussion">
                 </form>
             </div>
             <div class="icon-chat">
