sponsor card done

--- a/index.html
+++ b/index.html
@@ -64,7 +64,45 @@
         </div>
         <hr>
         <div class="feed">
-
+            <div class="card">
+                <div class="card-top">
+                    <div class="card-top-profile-picture">
+                        <img src="./images/main/card-top-profile-picture.svg" alt="">
+                        <div class="profile-data">
+                            <div class="name-and-verified">
+                                <span>Figma</span>
+                                <img src="./images/main/verified.png" alt="">
+                            </div>
+                            <div class="sponsored-nickname">
+                                <span>Sponsored</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="profile-actions">
+                        <div class="follow">
+                            <img src="./images/main/follow-mobile.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="card-text">
+                    <p>
+                        With Figma, everyone works towards a shared goal. This has enabled our product teams to ship new products faster and feel more confident in their decisions.
+                    </p>
+                </div>
+                <div class="card-image">
+                    <img src="./images/main/card-image.svg" alt="">
+                </div>
+                <div class="img-footer">
+                    <div class="left-info">
+                        <p>figma.com</p>
+                        <p>Nothing Great is made alone | Figma.com</p>
+                        <p>Connects everyone in the design process so you can deliver better products faster.</p>
+                    </div>
+                    <div class="learn-more">
+                        <button>Learn More</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
