horizontal scroll added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <hr>
         <div class="feed">
-            <div class="card">
+            <div class="card-sponsor">
                 <div class="card-top">
                     <div class="card-top-profile-picture">
                         <img src="./images/main/card-top-profile-picture.svg" alt="">
@@ -100,6 +100,59 @@
                     </div>
                     <div class="learn-more">
                         <button>Learn More</button>
+                    </div>
+                </div>
+                <div class="likes-comments">
+                    <div class="likes">
+                        <img src="./images/main/like.webp" alt="">
+                        <img src="./images/main/love.webp" alt="">
+                        <img src="./images/main/haha.webp" alt="">
+                        <p>129</p>
+                    </div>
+                    <div class="comments">
+                        <p>12 Comments</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="like-comment">
+                    <div class="like">
+                        <img src="./images/main/like-button.svg" alt="">
+                        <p>129</p>
+                    </div>
+                    <div class="comment">
+                        <img src="./images/main/comments-icon.svg" alt="">
+                        <p>Comments</p>
+                    </div>
+                </div>
+            </div>
+            <div class="scroller">
+                <div class="scrolling-wrapper">
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
+                    </div>
+                    <div class="scroller-card">
+                        <img src="./images/main/scroller/1.svg" alt="">
                     </div>
                 </div>
             </div>
